--- a/_posts/2019-08-24-蓝帽杯pwn.md
+++ b/_posts/2019-08-24-蓝帽杯pwn.md
@@ -7,11 +7,11 @@
 第一个功能getname，明显的栈溢出，甚至还有格式化字符串。  
 正常的利用当然是
 * 泄露libc基址  
-* puts(puts_addr)||格式化字符串
+* puts(puts_addr) OR 格式化字符串
 * ret2libc :
-* system(/bin/sh)||one_gadget  
+* system(/bin/sh) OR one_gadget  
   
-  
+
 ~~~python
 from pwn import *
 #from LibcSearcher import LibcSearcher
@@ -67,7 +67,9 @@ r.interactive()
 * bss段上,name与结构体非常接近
 * 伪造一个结构体，写入自己想要的地址，完成任意地址读写的功能。
 * show()读出puts_addr
-* edit()修改puts_addr为one_gadget地址
+* edit()修改puts_addr为one_gadget地址  
+
+
 ~~~python
 from pwn import *
 #from LibcSearcher import LibcSearcher
