--- a/_posts/2019-10-13-11至12月赛事.md
+++ b/_posts/2019-10-13-11至12月赛事.md
@@ -1,25 +1,3 @@
-## 2019“湖湘杯”网络安全技能大赛
-
-比赛级别：省级  
-形式：线上CTF、安全知识答题  
-报名：9月20日12:00至11月1日24:00  
-初赛：11月2日09:00至11月3日09:00  
-复赛：11月9日10:00至11月9日22:00  
-人数：每支队伍不超过3名队员  
-报名链接：http://hxb.hunan.gov.cn/message
-
-## 2019上海大学生网络安全大赛
-
-比赛级别：省级  
-形式：线上CTF  
-报名：截止时间10月26日  
-初赛：11月2日09:00至11月2日21:00   
-人数：每支队伍3名队员  
-报名方法：  
-加入大赛 QQ 官群(515383635)  
-关注公众号(上海市大学生网络安全大赛)  
-报名表填写完成后发送至 邮箱:shwas@qq.com
-
 ## 百度大学生网络安全技能大赛
 
 报名：10月8日至12月9日  
@@ -46,3 +24,10 @@
 初赛：10月26日至10月27日  
 人数：个人  
 报名链接：mooctest.net
+
+
+赛前宣讲会：2019年11月22日（周五），19:30  
+线上夺旗赛：2019年11月30日（周六），9:00~17:00  
+线下赛参赛队伍公布：2019年12月3日（周二）  
+线下攻防赛：2019年12月8日（周日），9:00~17:00  
+颁奖：2019年12月8日（周日），17:30
