--- a/_posts/2019-11-12-19级考核指导.md
+++ b/_posts/2019-11-12-19级考核指导.md
@@ -3,7 +3,7 @@
 ![cst](..\..\..\..\pics\emojis\cst.png)
 ## 有话要说
 
-计算机科学技术这门学科与许多的传统的学科是不同的，它并不要求线性的学习，即并不需要从最底层开始学起。特别是对于CTF比赛这类以解决问题为驱动的场景，从最最基础的知识开始学习显然是过于花费时间了，我们需要做到的应当是花最短的时间，学到最多对打CTF比赛帮助最大的知识。  
+计算机科学技术这门学科与许多的传统的学科不同，它并不要求线性的学习，即并不需要从最底层开始学起，特别是对于CTF比赛这类以解决问题为驱动的场景，从最最基础的知识开始学习显然是浪费时间。我们需要做到的应当是花最短的时间，学到最多对打CTF比赛帮助最大的知识。  
 希望各位新生能够改进自己的学习方法，提升自己的效率。  
 遇到完全陌生、难以理解的概念是我们日常学习中的家常便饭，选择放弃和始终停留在“abandon”处是最为愚蠢的策略。  
 
