--- a/_posts/2020-07-17-README.md
+++ b/_posts/2020-07-17-README.md
@@ -4,7 +4,7 @@
 
 ## 目录
 ### 面向对象程序设计
-[面向对象程序设计](../2020-06-25-oto.md)
+[面向对象程序设计](https://andrieyean.github.io/2020/06/25/oto/2020-06-25-oto.md)
 ### Web开发与安全管理
- - [Web开发与安全管理](../2020-06-30-web.md)
- - [示例代码](../2020-06-30-webhtml.md)
+ - [Web开发与安全管理](https://andrieyean.github.io/2020/06/30/web/2020-06-30-web.md)
+ - [示例代码](https://andrieyean.github.io/2020/06/30/web/2020-06-30-webhtml.md)
