--- a/_posts/2020-07-17-README.md
+++ b/_posts/2020-07-17-README.md
@@ -7,4 +7,4 @@
 [面向对象程序设计](https://andrieyean.github.io/2020/06/25/oto/)
 ### Web开发与安全管理
  - [Web开发与安全管理](https://andrieyean.github.io/2020/06/30/web/)
- - [示例代码](https://andrieyean.github.io/2020/06/30/web/2020-06-30-webhtml.md)
+ - [示例代码](https://andrieyean.github.io/2020/06/30/webhtml/)
