--- a/_posts/2020-06-30-web.md
+++ b/_posts/2020-06-30-web.md
@@ -1,30 +1,10 @@
 ### URL
 
-#### 基本结构
-> 通信协议://服务器名称:通信端口编号/文件夹/文件名
-#### 绝对路径
-> Internet网址的完整定位
-#### 相对路径
-> Internet上资源相对于当前页面的地址
-#### 绝对路径与相对路径
-> 一般制作网站时，网页之间的链接使用相对路径，方便快捷  
-
-###  动态网站与静态的差异
-静态网页是指：
-
-不应用程序而直接或间接制作成html的网页，这种网页的内容是固定的，修改和更新都必须要通过专用的网页制作工具，比如Dreamweaver。  
-
-动态网页是指：
-
-使用网页脚本语言，比如php、asp、asp.net等，通过脚本将网站内容动态存储到数据库，用户访问网站是通过读取数据库来动态生成网页的方法。
-
-动态网页和静态网页的最大区别是：
-
-1. 静态页面是不能随时改动的，静态是一次性写好放在服务器上进行浏览的，如果想改动，必须在页面上修改，然后再上传服务器覆盖原来的页面，这样才能更新信息，比较麻烦，使用者不能随时修改。
-
-2. 动态页面是可以随时改变内容的，有前后台之分，管理员可以在后台随时更新网站的内容，前台页面的内容也会随之更新，比较简单易学。
-
-
+1. 基本含义：统一资源定位地址的英文缩写。每个站点及站点上的每一个网页都有一个唯一的地址，这个地址称为统一资源定位地址。
+2. 绝对路径：Internet网址的完整定位，它包含协议种类，服务器名，文件路径和文件名。
+3. 相对路径：Internet上资源相当于当前页面的地址，它包含从当前位置指向目的页面位置的路径。
+4. 绝对路径与相对路径：一般制作网站时，网页之间的链接使用相对路径，方便快捷  
+5. 虚目录： 服务器硬盘上不在主目录下的一个物理目录或者其他计算机上的主目录而指定的好记的名称或别名
 
 ###  TCP/IP
 1. 使用"win+R"快捷键启动运行，输入cmd后按回车，打开命令提示窗口。
@@ -37,9 +17,10 @@
 ###  网站建设流程
 1. 用户需求调查与分析
 2. 确定服务器解决方案与域名备案（域名先申请后注册）
-2. 视觉设计与页面制作
-3. 项目开发 （搭建开发环境、程序设计、测试检测）
-4. 项目维护 （升级、安全补丁、安全管理、备份）
+3. 网站规划设计
+4. 界面设计，页面制作及程序开发
+3. 网站的测试与发布及文档的编写
+4. 网站的管理和维护 （升级、安全补丁、安全管理、备份）
 
 ### IIS提供服务
 1. web服务器：网页浏览
@@ -55,19 +36,79 @@
 5. 变量名称对大小写敏感（$y 与 $Y 是两个不同的变量）
 
 ### SQL
-#### sql注入定义
-通过把sql命令插入表单递交或页面请求的查询字符串，最终达到欺骗服务器执行恶意的sql命令
-#### sql注入漏洞成因
-程序员在编写代码的时候，没有对用户输入数据的合法性进行判断，是应用程序存在安全隐患，攻击者可以提交一段数据的操作代码，根据程序返回的结果，获得攻击者想要的结果。
+#### SQL注入定义
+* 通过把SQL命令插入表单递交或页面请求的查询字符串，最终达到欺骗服务器执行恶意的SQL命令
+
 
 #### SQL法入安全总结
-1. 对用户的输入进行按校验,可以通过正则表达式限制长度;时单引号和双"_"等进行转换等。Var var=/^\d{4}$/
-2. 不要使用动落拼接sql语句，可以使用多数化的sql或直接使用存储过程进行数据查询存取。
+1. 对用户的输入进行按校验,可以通过正则表达式限制长度，对单引号和双"-"等进行转换等。Var var=/^\d{4}$/
+2. 不要使用动态拼接SQL语句，可以使用参数化的SQL或直接使用存储过程进行数据查询存取。
 3. 不要使用管理员权限的数据库连接，为每个应用使用单独的权限有限的数据库连接。
 4. 不要把机密信息直接存放，加密或hash后的密码和敏感的信息
 5. sgl注入的检测方法一般采取辅助软件或网站平台来检测
 
+###  动态网站与静态的差异
+1. 动态网站可以直接地使用数据库，并通过数据源直接操作数据库；而静态网站不可以使用，静态网站只能使用表格实现动态网站数据库表中少有的一部分数据的显示，不能操作。
+2. 动态网站是放到服务器上的，要看到其源程序或者对其进行直接的修改都须在服务器上进行，因此保密性能比较优越。静态网站实现不了信息的保密功能。
+3. 动态网站可以实现远程数据的调用，而静态网站连本地数据都不可以用，更谈不上远程数据了.
+4. 静态网站的网页是以.html　htm结尾的，客户不能随意修改,要专用软件。而动态网站大部分是带数据库的，自己可以随时在线修改，网页常以php、asp等结尾。
+
 
 #### XSS跨站脚本攻击
-[XSS跨站脚本攻击](https://baike.baidu.com/item/%E8%B7%A8%E7%AB%99%E8%84%9A%E6%9C%AC%E6%94%BB%E5%87%BB/8186208?fr=aladdin
-)
+* 指入侵者在远程WEB页面的HTML代码中插入具有恶意目的的数据，用户认为该页面是可信赖的，但是当浏览器下载该页面，嵌入其中的脚本将被解释执行。”由于HTML语言允许使用脚本进行简单交互，入侵者便通过技术手段在某个页面里插入一个恶意HTML代码，例如记录论坛保存的用户信息（Cookie），由于Cookie保存了完整的用户名和密码资料，用户就会遭受安全损失。如这句简单的Javascript脚本就能轻易获取用户信息：alert(document.cookie)，它会弹出一个包含用户信息的消息框。入侵者运用脚本就能把用户信息发送到他们自己的记录页面中，稍做分析便获取了用户的敏感信息。
+
+### 实例代码
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="gb2312"/>
+    <title>its is a test hello</title>
+</head>
+<body>
+
+    <!-- 提交实验 -->
+
+    <form name="test" action="https://www.w3school.com.cn/example/html5/demo_form.asp" method="GET">
+    <!-- action是提交到的网址，method是提交方式 -->
+    <fieldset>
+        <legend>用户名</legend>
+        <label for="username">用户名</label><input type="text" name="uname" id="username"/>
+    </fieldset>
+    
+    <fieldset>
+        <legend>水果</legend>
+        香蕉<input type="checkbox" name="fruit" value="香蕉" />
+        桃子<input type="checkbox" name="fruit" value="桃子" />
+    </fieldset>
+    
+    <fieldset id="tm_select_text" class="">
+        <legend>tm_select_text</legend>
+    </fieldset>
+
+    <input type="submit" value="提交"><input type="reset" value="重置">
+    </form>
+
+
+    <!-- 表单实验 -->
+    
+    <table border="1" cellspacing="0" width = "50%">
+        <caption>标题</caption>
+        <tr align="center">
+            <td rowspan="2"><b>11</b></td>
+            <td colspan="2"><u>23</u></td>
+        </tr>
+        <tr align="center">
+            <td >2</td>
+            <td >3</td>
+        </tr>
+        <tr align="center">
+            <td bgcolor="#FFF0000">1</td>
+            <td >2</td>
+            <td >3</td>
+        </tr>
+    </table>
+
+</body>
+</html>
+```
