添加提交实验二与预览图

--- a/_posts/2020-06-30-web.md
+++ b/_posts/2020-06-30-web.md
@@ -67,8 +67,7 @@
 </head>
 <body>
 
-    <!-- 提交实验 -->
-
+    <!-- 提交实验一 -->
     <form name="test" action="https://www.w3school.com.cn/example/html5/demo_form.asp" method="GET">
     <!-- action是提交到的网址，method是提交方式 -->
     <fieldset>
@@ -90,8 +89,30 @@
     </form>
 
 
+    <!-- 提交实验二 -->
+    <form action=" " method="GET">
+        姓名：<input type="text" value=""><br>
+        密码：<input type="password" value=""><br>    
+        性别：<input type="radio" name="sex" value="男">男
+        <input type="radio" name="sex" value="女">女<br>
+        爱好：<input type="checkbox" name="fav" value="看书" checked="checked">看书
+        <input type="checkbox" name="fav" value="音乐">音乐
+        <input type="checkbox" name="fav" value="跑步">跑步<br>
+        学历：<select>
+            <option value="本科">本科</option>
+            <option value="硕士">硕士</option>
+            <option value="专科">专科</option>
+        </select><br>
+        个人简历：<textarea>
+        </textarea><br>
+
+        <input type="submit" value="注册">
+        <input type="reset"  value="重置">
+
+    </form>
+
+
     <!-- 表单实验 -->
-    
     <table border="1" cellspacing="0" width = "50%">
         <caption>标题</caption>
         <tr align="center">
@@ -112,3 +133,7 @@
 </body>
 </html>
 ```
+
+## 效果预览
+
+![webpreview](..\..\..\..\pics\wp\webpreview.jpg)webpreview.jpg
