--- a/_posts/2020-06-25-oto.md
+++ b/_posts/2020-06-25-oto.md
@@ -144,10 +144,10 @@ if __name__ =='__main__':
 
 ### 正则表达式：
 #### 电子邮件
-``` ^\w+@(\w+\.)+\w+$ ```
+- ``` ^\w+@(\w+\.)+\w+$ ```
 #### 网址
-``` ^https?://[\w\.]+$ ```  
-``` (https?|ftp|file)://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|] ```
+- ``` ^https?://[\w\.]+$ ```  
+- ``` (https?|ftp|file)://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|] ```
 
 ### 常用字符串函数：编码、格式化 
 见教材第七章
